overlapping issue fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,8 +8,13 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Poppins", sans-serif;
+  @apply bg-background;
 }
 
 /* Resets all a tag styles */
